# ipi-excercises

IPI_03_Einmaleins/: einmaleins.cc
IPI_03_Reihenberechnung/: reihenberechnung.cc
IPI_03_ggT/: ggt.cc
IPI_04.1_Sort_Numbers/: array_sort.cc
IPI_04.2_Volumes_etcpp/: Kreis.cpp  Kreis.h  Kugel.h  Quader.cpp  Quader.h  Quadrat.cpp  Rechteck.cpp  Wuerfel.cpp  geometric_objects.cc
IPI_04.3_Quadratic_Equations/: quadratic_equations.cc
IPI_04.5_Matrices/: matrices.cc
IPI_05.1_Fractions/: structure.cc
IPI_05.2_Pointers/: pointer.cc
IPI_05.3_Recursive_Functions/: recursive_fcns.cc
IPI_06.1_3D_Vectors/: main_myvector.cc  myvector.cc  myvector.h
IPI_06.2_Error_Calculation/: errorvalue.h  main_errorvalue.cc
IPI_07.2_geometric_objects/: Circle.h  Cube.cc  Cuboid.cc  Rectangle.h  Sphere.cc  Square.cc  geometric_objects.cc
IPI_07.3_labyrinth/: rooms.cc
IPI_08.3_Kaleidoscope/: christmas.pgm
IPI_09.1_Christmas_Tree/: stringMan.cc
IPI_09.2_Gifts_Under_Tree/: rectangle.h
IPI_10.2_Palindrom/: CMakeLists.txt
IPI_10.2_Palindrom/src/: CMakeLists.txt  pali.cpp  pali.h  palindrom.cc  simpletests.h  words.txt
IPI_11.1_List/: main.cc  myList.h
IPI_11.2_Decryption/: decrypt.cc  decrypted_text.txt  encrypted_text.txt
IPI_11.3_Insertion_Sort/: insertion_sort.cc
IPI_4.2_Volumes_etcpp/: Kugel.cpp  Quadrat.h  Rechteck.h  Wuerfel.h
IPI_4.4_Roots/: roots.cc
IPI_6.2_Error_Calculation/: errorvalue.cc
IPI_7.1_PointClasses/: points.cc
IPI_7.2_geometric_objects/: Circle.cc  Cube.h  Cuboid.h  Rectangle.cc  Sphere.h  Square.h
IPI_8.2_ImageClass/: christmas.pgm  (+1 more)
(+13 files in other folders)
